--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Canva Pro - Get Your Link Now</title>
+
+    <meta name="monetag" content="109a3e9430bcc27ec54aeeeff78fa8f2">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
