--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Canva Pro - Get Your Link Now</title>
 
-    <meta name="monetag" content="109a3e9430bcc27ec54aeeeff78fa8f2">
+
+<meta name="b2602d74dda369059d764752c6ce46bfec57596f" content="b2602d74dda369059d764752c6ce46bfec57596f" />
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
