--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- HilltopAds Verification -->
     <meta name="b2602d74dda369059d764752c6ce46bfec57596f" content="b2602d74dda369059d764752c6ce46bfec57596f" />
-
+<meta name="referrer" content="no-referrer-when-downgrade" />
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
