--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <!-- HilltopAds Verification -->
     <meta name="b2602d74dda369059d764752c6ce46bfec57596f" content="b2602d74dda369059d764752c6ce46bfec57596f" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
+
+<!-- adsterra -->
+    <script async="async" data-cfasync="false" src="//pl27243841.profitableratecpm.com/08a73c348fa7151af2745c028ec91bb9/invoke.js"></script>
+<div id="container-08a73c348fa7151af2745c028ec91bb9"></div>
+
+
+
+    
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
